try to fix font sizing on mobile/tablet

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -225,7 +225,7 @@ ul li:hover ul.cat-dropdown {
   display: none;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 650px) {
   body {
     width: 97.5vw;
     height: 100vh;
@@ -244,7 +244,7 @@ ul li:hover ul.cat-dropdown {
 
   .website-title{
     text-align: center;
-    font-size: 6vw;
+    font-size: 6vmin;
     color: #2d3142;
     font-family: Tangerine, 'Source Sans Pro';
     padding-top: 1rem;
@@ -294,7 +294,7 @@ ul li:hover ul.cat-dropdown {
 
   li a {
     display: block;
-    font-size: 1rem;
+    font-size: 2vmin;
     color: #2d3142;
     text-align: center;
     padding: 14px 16px;
@@ -332,7 +332,7 @@ ul li:hover ul.cat-dropdown {
     display: flex;
     text-align: center;
     align-self: center;
-    font-size: 2vw;
+    font-size: 2vmin;
     font-weight: 300;
     color: #000000;
     font-family: Spectral, 'Source Sans Pro';
